Remove useless options, make minor code changes

--- a/language/ru-RU/ru-RU.mod_flexi_custom_code.ini
+++ b/language/ru-RU/ru-RU.mod_flexi_custom_code.ini
@@ -1,18 +1,9 @@
-FLEXICUSTOMCODE="Модуль позволяет вставить произвольный код на HTML, CSS, JavaScript или PHP на любую страницу сайта. Например, с ег помощью можно разместить код вызова рекламы, счётчик или встраиваемый код. По сути это аналог стандартного модуля «HTML-код», но без фильтров текста и с поддержкой PHP."
+FLEXI_CUSTOM_CODE="Модуль позволяет вставить произвольный код на HTML, CSS, JavaScript или PHP на любую страницу сайта. Например, с ег помощью можно разместить код вызова рекламы, счётчик или встраиваемый код. По сути это аналог стандартного модуля «HTML-код», но без фильтров текста и с поддержкой PHP."
 
 FCC_CODE="Код"
 FCC_CODEDESC="Любой код на HTML, CSS, JavaScript или PHP"
 FCC_USEPHP="Это PHP"
 FCC_USEPHPDESC="Если в поле выше есть код на PHP, то выберите «Да». Иначе укажите «Нет»: так модуль будет работать чуть быстрее."
-FCC_SHOWTO="Отображение модуля"
-FCC_SHOWTODESC="Пользователи, которые увидят этот модуль."
-FCC_REGISTERED="Только авторизованным пользователям"
-FCC_ALL="Всем пользователям"
-FCC_GUEST="Только неавторизованным"
 
-FCC_CLEANJS="Очищать JavaScript"
-FCC_CLEANJSDESC="Убирать переносы строк из JavaScript."
-FCC_CLEANCSS="Очищать CSS"
-FCC_CLEANCSSDESC="Убирать переносы строк из CSS."
-FCC_CLEANHTML="Очищать HTML"
-FCC_CLEANHTMLDESC="Убирать переносы строк из HTML. Это поможет, если в исходном коде страницы остаётся слишком много странных вертикальных отступов."
+FCC_CLEAN="Очищать код"
+FCC_CLEANDESC="Убирать переносы строк из кода. Это поможет, если в исходном коде страницы остаётся слишком много отступов."
