Add auto-detection of PHP code and remove corresponding option from module settings

--- a/language/en-GB/en-GB.mod_flexi_custom_code.sys.ini
+++ b/language/en-GB/en-GB.mod_flexi_custom_code.sys.ini
@@ -1,1 +1,1 @@
-FLEXICUSTOMCODE="This module allows you to insert any code like php, javascript PHP, CSS and html at site modules positions. For example, It's can be used for simple code, simple function, embed code, adsense code, affiliation code and others copy and paste codes for Joomla site."
+FLEXI_CUSTOM_CODE="This module allows you to insert any code like php, javascript PHP, CSS and html at site modules positions. For example, It's can be used for simple code, simple function, embed code, adsense code, affiliation code and others copy and paste codes for Joomla site."
