--- a/language/ru-RU/ru-RU.mod_flexi_custom_code.ini
+++ b/language/ru-RU/ru-RU.mod_flexi_custom_code.ini
@@ -1,9 +1,6 @@
 FLEXI_CUSTOM_CODE="Модуль позволяет вставить произвольный код на HTML, CSS, JavaScript или PHP на любую страницу сайта. Например, с ег помощью можно разместить код вызова рекламы, счётчик или встраиваемый код. По сути это аналог стандартного модуля «HTML-код», но без фильтров текста и с поддержкой PHP."
 
 FCC_CODE="Код"
-FCC_CODEDESC="Любой код на HTML, CSS, JavaScript или PHP"
-FCC_USEPHP="Это PHP"
-FCC_USEPHPDESC="Если в поле выше есть код на PHP, то выберите «Да». Иначе укажите «Нет»: так модуль будет работать чуть быстрее."
-
-FCC_CLEAN="Очищать код"
-FCC_CLEANDESC="Убирать переносы строк из кода. Это поможет, если в исходном коде страницы остаётся слишком много отступов."
+FCC_CODEDESC="Любой код на HTML, CSS, JavaScript или PHP. Код на PHP должен начинаться с &lt;?php, иначе он будет вставлен как обычный текст."
+FCC_CLEAN="Убирать переносы строк и табуляцию"
+FCC_CLEANDESC="Если выбрано «Да», то из кода будут удалены символы переноса строк и табуляции."
