--- a/Changelog
+++ b/Changelog
@@ -20,6 +20,9 @@ Added support for Joomla 3.0.
 Fixed and Tested for Joomla 3.x.
 Fixed and Tested for PHP 5.5.x.
 
-* 2.0 — February 5, 2022
+* 2.0 — February 9, 2022
 Added support for Joomla 4.x.
 Added support for PHP 8.
+Added auto-detection of PHP code.
+Removed useless options from module settings.
+Code refactoring and codestyle improvements.
