--- a/language/en-GB/en-GB.mod_flexi_custom_code.ini
+++ b/language/en-GB/en-GB.mod_flexi_custom_code.ini
@@ -1,6 +1,6 @@
-FLEXI_CUSTOM_CODE="This module allows you to insert any code like php, javascript PHP, CSS and html at site modules positions. For example, It's can be used for simple code, simple function, embed code, adsense code, affiliation code and others copy and paste codes for Joomla site."
+FLEXI_CUSTOM_CODE="This module allows you to insert any code like HTML, CSS, JavaScript and PHP into site modules positions. For example, it can be used for an embed code, ads code, analytics code and other copy and paste codes. In fact, it's the same as a built-in Joomla's HTML module, but it does not strips anything from the code and also supports PHP."
 
 FCC_CODE="Code"
-FCC_CODEDESC="Insert any code here, it can be for php, html, javascript, css"
-FCC_CLEAN="Clean code"
-FCC_CLEANDESC="Clean all code of Line Breaks. This may help if you are getting odd empty verticle space in your output."
+FCC_CODEDESC="Insert any code here. It can be HTML, CSS, JavaScript or PHP. PHP code must start with &lt;?php. Caution: PHP errors are not handled and thus may break the site."
+FCC_CLEAN="Remove tabs & newline characters"
+FCC_CLEANDESC="Remove tabs and newline characters (i.e. \n and \r) from the output."
