--- a/language/en-GB/en-GB.mod_custom_code.ini
+++ b/language/en-GB/en-GB.mod_custom_code.ini
@@ -1,4 +1,4 @@
-CUSTOM_CODE="This module allows you to insert any code like HTML, CSS, JavaScript and PHP into site modules positions. For example, it can be used for an embed code, ads code, analytics code and other copy and paste codes. In fact, it's the same as a built-in Joomla's HTML module, but it does not strips anything from the code and also supports PHP."
+CUSTOM_CODE="This module allows you to insert any code like HTML, CSS, JavaScript and PHP into site modules positions. For example, it can be used for an embed code, ads code, analytics code and other copy and paste codes. In fact, it's the same as a built-in Joomla's HTML module, but it does not strip anything from the code and also supports PHP."
 
 CC_CODE="Code"
 CC_CODEDESC="Insert any code here. It can be HTML, CSS, JavaScript or PHP. PHP code must start with &lt;?php. Caution: PHP errors are not handled and thus may break the site."
